turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:22: error: ')' expected but '}' found.
	setCouleurSol(colors(rule(state)(colors(cpt)(0)))}
                                                         ^